Molecule-author-spacing-bug

--- a/stories/Molecules/Text/SmallCopy/smallcopy.scss
+++ b/stories/Molecules/Text/SmallCopy/smallcopy.scss
@@ -4,6 +4,7 @@
 
 /* small copy */
 .smallcopy__box {
+  display: flex;
   margin-bottom: $spacing-04;
 
   a {
